# computer-use-preview

./: setup.cfg  test_agent.py  test_main.py
computer_use/: agent.py  main.py
computer_use/computers/playwright/: playwright.py
