[metadata]
name = computer-use-preview
version = 0.1.0
description = A preview of computer use capabilities with Gemini.
long_description = file: README.md
long_description_content_type = text/markdown
author = Google LLC
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
py_modules = agent, main
python_requires = >=3.9
install_requires =
    termcolor==3.1.0
    pydantic==2.12.0
    google-genai>=1.40.0
    playwright==1.55.0
    browserbase==1.4.0
    rich
    pytest

[options.packages.find]
where = .
include = computers*

[options.entry_points]
console_scripts =
    computer-use = main:main
